# personal

./: .gitignore  Cargo.toml  input.css  package-lock.json  tailwind.config.js
data/: projects.toml  work.toml
src/: main.rs
src/templates/: base.html
static/: style.css
templates/: base.html  index.html
