[package]
name = "personal"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.14.0"
axum = "0.8.7"
chrono = "0.4.42"
dotenv = "0.15.0"
reqwest = "0.12.25"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
toml = "0.9.8"
tower-http = { version = "0.6.7", features = ["fs"] }
